--- a/src/main/resources/templates/GoodsShow.html
+++ b/src/main/resources/templates/GoodsShow.html
@@ -1,52 +1,64 @@
-<!DOCTYPE html>
-<html lang="en"  xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>居市</title>
-    <meta name="description" content="Neat">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" user-scalable="no">
-    <link rel="stylesheet" href="./css/style.css">
-    <script src="./js/jquery.min.js"></script>
-    <script src="./js/choice.js"></script>
 
-<!--    <style>-->
-<!--        body{text-align:center}-->
-<!--        main{ margin:0 auto; width:300px;border:2px solid #00F}-->
-<!--    </style>-->
+<!DOCTYPE html >
+<html lang="en" xmlns:th="http://www.thymeleaf.org" >
+<head>
+<meta charset="UTF-8">
+  <!--一般标题栏里的图片是16*16像素-->
+  <link rel="Shortcut Icon" href="/imgs/Logo_5.png" />
+<title>居市</title>
+
+<link rel="stylesheet" href="css/style.css">
 
 </head>
 <body>
-        <div class="main-group">
-            <h2 class="title">
-                推荐商品
-            </h2>
-            <div th:each="goods:${GoodsVo}">
-            <div class="data-group"  >
-                <div class="item-group" >
-                    <a href="#">
-                        <div class="img-group">
-                            <img  th:src="${goods.getGImg()}" class="goods-img" alt="" style="padding: 2em;">
-                        </div>
-                    </a>
-                    <div class="desc-group">
-                        <div class="name-color-group">
-                            <div class="name" th:text="${goods.getGName()}"></div>
+  <!--顶部导航栏-->
+  <header class="main-header ">
+      <h1>
+        <a style="font-size: 30px" href="/JuShi">居 市</a></h1>
+      <nav>
 
-                        </div>
-                        <div class="price-group" th:text="${goods.getGPrice()}"></div>
-                    </div>
-                </div>
-            </div>
-            </div>
+        <ul>
+          <li><a href="">首页</a></li>
+          <li><a href="">用户</a></li>
+
+        </ul>
+      </nav>
+  </header>
+
+<div class="contenedorCards">
+  <div th:each="goods:${GoodsVo}">
+  <div class="card">
+    <div class="wrapper">
+      <div class="colorProd"></div>
+      <!-- 展示的商品图片 -->
+<!--      <div class="imgProd" style="background:url(img/product_img05.jpg) 100% 0 no-repeat;"></div>-->
+      <div class="imgProd">
+        <img th:src="${goods.getGImg()}" height="300" width="280" >
+      </div>
+      <div class="infoProd">
+        <!-- 商品名 -->
+        <!--ARTFX DC UNIVERSE Batman HUSH Renewal Package-->
+        <p class="nombreProd" th:text="${goods.getGName()}"></p>
+        <!-- 发出日期 -->
+        <!-- <p class="extraInfo">Fecha de salida: 31/03/2021</p> -->
+        <div class="actions">
+          <div class="preciosGrupo">
+
+            <!-- 原价 -->
+<!--            <p class="precio precioOferta">9,99</p>-->
+            <!-- 折后价 -->
+            <p class="precio precioProd"  th:text="${goods.getGPrice()}"></p>
+          </div>
         </div>
-        <script src="layui/layui.js"></script>
-            <script type="text/javascript">
-                new SwitchGoods({
-                    box_class: 'item-group',
+      </div>
+    </div>
+  </div>
+  </div>
+</div>
 
-                });
-            </script>
+
+<script src='js/jquery.min.js'></script>
+<script src="js/script.js"></script>
 
 </body>
 </html>
