--- a/src/main/resources/templates/GoodsShow.html
+++ b/src/main/resources/templates/GoodsShow.html
@@ -18,8 +18,8 @@
       <nav>
 
         <ul>
-          <li><a href="">首页</a></li>
-          <li><a href="">用户</a></li>
+   <!--       <li><a href="">首页</a></li>-->
+          <li><a href="" th:text="">未登录</a></li>
 
         </ul>
       </nav>
