--- a/src/main/resources/templates/Login.html
+++ b/src/main/resources/templates/Login.html
@@ -149,7 +149,7 @@
     <div class="container">
         <div class="wrap">
             <div>
-                <form action="Login" method="post">
+                <form action="LoginJudge" method="post">
                     <div class="logoHead">
                         <h1 align="center" style="margin-top: 15px">居 市</h1>
                     </div>
