--- a/src/main/resources/templates/GoodsShow.html
+++ b/src/main/resources/templates/GoodsShow.html
@@ -12,12 +12,21 @@
 <body>
 <!--顶部导航栏-->
 <header class="main-header">
-    <h1><a href="#" style="font-size: 20px">居 市</a></h1>
+    <h1><a href="/JuShi/" style="font-size: 20px">居 市</a></h1>
     <nav>
         <ul>
-            <li><a href="#" >
-                未登录
-            </a> </li>
+            <li>
+                <div th:if="${session.user==null}">
+                    <a href="Login" >
+                        未登录
+                    </a>
+                </div>
+
+                <div th:if="${session.user!=null}" th:text="${session.user.username}">
+
+                </div>
+
+            </li>
         </ul>
     </nav>
 </header>
